@@ -23,6 +23,7 @@ VERSION 2.9-Beta 1
      compilers currently supported by KDE.
 
   BUGFIXES:
+   * Allows CollectionBrowser filter to have length of almost 24 hours. (BR 291400)
    * Prevent creation of video stream when transcoding to Opus. Patch by Martin Brodbeck.
    * Fix crash when starting Amarok with an iPod mounted. (BR 329498)
    * Also fetch cover art from xiph-comments with METADATA_BLOCK_PICTURE tag.
